--- a/JuicoyZer/JUICOYINfo.plist
+++ b/JuicoyZer/JUICOYINfo.plist
@@ -36,7 +36,9 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>3</string>
 		<key>JUICOYUVINfofolloweisvip</key>
-		<string>1</string>
+		<string>0</string>
+		<key>JUICOYUneedVIP</key>
+		<string>0</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -72,7 +74,9 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>1</string>
 		<key>JUICOYUVINfofolloweisvip</key>
-		<string>1</string>
+		<string>0</string>
+		<key>JUICOYUneedVIP</key>
+		<string>0</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -108,7 +112,9 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>4</string>
 		<key>JUICOYUVINfofolloweisvip</key>
-		<string>1</string>
+		<string>0</string>
+		<key>JUICOYUneedVIP</key>
+		<string>0</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -144,7 +150,9 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>2</string>
 		<key>JUICOYUVINfofolloweisvip</key>
-		<string>0</string>
+		<string>1</string>
+		<key>JUICOYUneedVIP</key>
+		<string>1</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -180,6 +188,8 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>1</string>
 		<key>JUICOYUVINfofolloweisvip</key>
+		<string>1</string>
+		<key>JUICOYUneedVIP</key>
 		<string>1</string>
 	</dict>
 	<dict>
@@ -217,6 +227,8 @@
 		<string>1</string>
 		<key>JUICOYUVINfofolloweisvip</key>
 		<string>1</string>
+		<key>JUICOYUneedVIP</key>
+		<string>1</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -252,6 +264,8 @@
 		<key>JUICOYUVINfofollowerscount</key>
 		<string>0</string>
 		<key>JUICOYUVINfofolloweisvip</key>
+		<string>1</string>
+		<key>JUICOYUneedVIP</key>
 		<string>1</string>
 	</dict>
 	<dict>
@@ -289,6 +303,8 @@
 		<string>1</string>
 		<key>JUICOYUVINfofolloweisvip</key>
 		<string>1</string>
+		<key>JUICOYUneedVIP</key>
+		<string>1</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -325,6 +341,8 @@
 		<string>2</string>
 		<key>JUICOYUVINfofolloweisvip</key>
 		<string>1</string>
+		<key>JUICOYUneedVIP</key>
+		<string>1</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -359,6 +377,8 @@
 		<string>6</string>
 		<key>JUICOYUVINfofolloweisvip</key>
 		<string>1</string>
+		<key>JUICOYUneedVIP</key>
+		<string>0</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
@@ -568,11 +588,11 @@
 		<key>JUICOYUID</key>
 		<string>89890846</string>
 		<key>JUICOYUName</key>
-		<string></string>
+		<string>Harmony</string>
 		<key>JUICOYUphoto</key>
 		<string>89890846AUA</string>
 		<key>JUICOYUsignture</key>
-		<string></string>
+		<string>Where technique meets true passion.</string>
 		<key>JUICOYUViadioPic</key>
 		<string></string>
 		<key>JUICOYUViadioPath</key>
@@ -582,21 +602,21 @@
 		<key>JUICOYUViadioComment</key>
 		<string></string>
 		<key>JUICOYUVFriendsPics</key>
-		<string></string>
+		<string>89890847AUA%%%89890850AUA</string>
 		<key>JUICOYUVInterests</key>
-		<string></string>
+		<string>Fast%%%Spin%%%Momentum%%%Dynamic%%%Action</string>
 		<key>JUICOYUVINfoBirth</key>
-		<string></string>
+		<string>1998-10-10</string>
 		<key>JUICOYUVINfoWeight</key>
-		<string></string>
+		<string>59kg</string>
 		<key>JUICOYUVINfoHeight</key>
-		<string></string>
+		<string>173cm</string>
 		<key>JUICOYUVINfofollowintcount</key>
-		<string></string>
+		<string>4</string>
 		<key>JUICOYUVINfofollowerscount</key>
-		<string></string>
+		<string>0</string>
 		<key>JUICOYUVINfofolloweisvip</key>
-		<string></string>
+		<string>0</string>
 	</dict>
 	<dict>
 		<key>JUICOYUID</key>
