送礼功能完善

--- a/JuicoyZer.xcodeproj/xcshareddata/xcschemes/JuicoyZer.xcscheme
+++ b/JuicoyZer.xcodeproj/xcshareddata/xcschemes/JuicoyZer.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:JuicoyZer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "APP_DISTRIBUTOR_ID_OVERRIDE"
+            value = "com.apple.AppStore"
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
       <StoreKitConfigurationFileReference
          identifier = "../../JuicoyZer/com.juicoy.sparkle.storekit">
       </StoreKitConfigurationFileReference>
